meta tags added

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ParentChildInputBinding</title>
+  <title>Parent-Child-Component-Data-Sharing</title>
   <base href="/">
 
+  <meta name="title" content="Angular5 parent child data sharing using input binding">
+  <meta name="description" content="Repo for demonstarting how data is shared between parent and child components using 'Input' binding, in Angular5">
+  <meta name="author" content="rtvalluri raviteja valluri">
+  <meta name="keywords" content="ng5 angular5 component interaction share data bewteen components">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
